--- a/pages/resultado3.html
+++ b/pages/resultado3.html
@@ -64,13 +64,13 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>
+                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Home</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-medkit fa-fw"></i> Endocrinologia<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Endocrinologia<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#"><i class="fa fa-check fa-fw"></i> Cálcio<span class="fa arrow"></span></a>
+                                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Cálcio<span class="fa arrow"></span></a>
                                     <ul class="nav nav-third-level">
                                         <li>
                                             <a href="exame1.html"><i class="fa fa-flask fa-fw"></i> Exame 1</a>
