--- a/pages/exame5.html
+++ b/pages/exame5.html
@@ -73,7 +73,7 @@
                                     <a href="#"><i class="fa fa-check fa-fw"></i> Cálcio<span class="fa arrow"></span></a>
                                     <ul class="nav nav-third-level">
                                         <li>
-                                            <a href="calcio_correcao.html"><i class="fa fa-flask fa-fw"></i> Nome do Exame 1</a>
+                                            <a href="calcio_correcao.html"><i class="fa fa-flask fa-fw"></i>Correção de Cálcio</a>
                                         </li>
                                         <li>
                                             <a href="exame2.html"><i class="fa fa-flask fa-fw"></i> Nome do Exame 2</a>
