Alteração nos menus

--- a/pages/globulina_correcao.html
+++ b/pages/globulina_correcao.html
@@ -76,16 +76,16 @@
                                             <a href="calcio_correcao.html"><i class="fa fa-flask fa-fw"></i> Correção de Cálcio</a>
                                         </li>
                                         <li>
-                                            <a href="exame2.html"><i class="fa fa-flask fa-fw"></i> Nome do Exame 2</a>
+                                            <a href="albumina_correcao.html"><i class="fa fa-flask fa-fw"></i> Correção de Albumina</a>
                                         </li>
                                         <li>
-                                            <a href="exame3.html"><i class="fa fa-flask fa-fw"></i> Nome do Exame 3</a>
+                                            <a href="globulina_correcao.html"><i class="fa fa-flask fa-fw"></i> Correção de Globulina</a>
                                         </li>
                                         <li>
-                                            <a href="exame4.html"><i class="fa fa-flask fa-fw"></i> Nome do Exame 4</a>
+                                            <a href="ph_correcao.html"><i class="fa fa-flask fa-fw"></i> Correção de pH</a>
                                         </li>
                                         <li>
-                                            <a href="exame5.html"><i class="fa fa-flask fa-fw"></i> Nome do Exame 5</a>
+                                            <a href="proteina_limite.html"><i class="fa fa-flask fa-fw"></i> Limites de Proteína</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -99,11 +99,11 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Nome Exame 4</h1>
+                    <h1 class="page-header">Correção de Globulina</h1>
                 </div>
             </div>
 
-            Campos Exame 4.
+            Correção de Globulina.
 
         </div>
 
