Alteração na tela de resultados.
Co-Authored-By: lancastter <lancastter@users.noreply.github.com>
Co-Authored-By: Yuri Sanchez <sanchezyuri@users.noreply.github.com>

--- a/pages/albumina_correcao.html
+++ b/pages/albumina_correcao.html
@@ -115,8 +115,8 @@
                         <label for="calcio">Cálcio(S)</label>
                         <input type="text" placeholder="mg/dL" name="calcio" id="calcio" class="form-control" required><br>
                         
-                        <label for="hr">Albumina(S)</label>
-                        <input type="text" placeholder="g/dL" name="hr" id="hr" class="form-control" required>
+                        <label for="albumina">Albumina(S)</label>
+                        <input type="text" placeholder="g/dL" name="albumina" id="albumina" class="form-control" required>
                         <br>
                         <button class="btn btn-primary">Calcular</button>
                   </div>
