--- a/pages/ph_correcao.html
+++ b/pages/ph_correcao.html
@@ -115,8 +115,8 @@
                         <label for="calcio">Cálcio(S)</label>
                         <input type="text" placeholder="mg/dL" name="calcio" id="calcio" class="form-control" required><br>
                         
-                        <label for="hr">pH(B)</label>
-                        <input type="text" placeholder="unidades de pH" name="hr" id="hr" class="form-control" required>
+                        <label for="ph">pH(B)</label>
+                        <input type="text" placeholder="unidades de pH" name="ph" id="ph" class="form-control" required>
                         <br>
                         <button class="btn btn-primary">Calcular</button>
                   </div>
