--- a/pages/proteina_limite.html
+++ b/pages/proteina_limite.html
@@ -115,8 +115,8 @@
                         <label for="calcio">Albumina(S)</label>
                         <input type="text" placeholder="g/dL" name="calcio" id="calcio" class="form-control" required><br>
                         
-                        <label for="hr">Globulina(S)</label>
-                        <input type="text" placeholder="g/dL" name="hr" id="hr" class="form-control" required>
+                        <label for="globulina">Globulina(S)</label>
+                        <input type="text" placeholder="g/dL" name="globulina" id="globulina" class="form-control" required>
                         <br>
                         <button class="btn btn-primary">Calcular</button>
                   </div>
