--- a/pages/calcio_correcao.html
+++ b/pages/calcio_correcao.html
@@ -115,7 +115,7 @@
                         <label for="calcio">Cálcio(S)</label>
                         <input type="text" placeholder="mg/dL" name="calcio" id="calcio" class="form-control" required><br>
                         
-                        <label for="hr">Albumina(S)</label>
+                        <label for="albumina">Albumina(S)</label>
                         <input type="text" placeholder="g/dL" name="albumina" id="albumina" class="form-control" required>
                         <br>
                         <button class="btn btn-primary">Calcular</button>
